--- a/css/modules/_includes.scss
+++ b/css/modules/_includes.scss
@@ -268,7 +268,7 @@ section.content_section + section.content_section {
     }
     @media (min-width: $breakpoint-tablet) {
       width: 50%;
-      min-height: 540px;
+      min-height: 560px;
     }
   }
   .square_content {
@@ -292,15 +292,15 @@ section.content_section + section.content_section {
         padding: 40px;
       }
       @media (min-width: $breakpoint-desktop) {
-        @include vertical-align;
         padding: 60px;
       }
-      
       p {
         color: $blue;
         font: $normal 1.4rem/2.4rem $regular;
+        margin-bottom: 20px;
         @media (min-width: $breakpoint-laptop) {
           font: $normal 1.6rem/2.6rem $regular;
+          
         }
         @media (min-width: $breakpoint-desktop) {
           font: $normal 1.7rem/3.0rem $regular;
@@ -308,7 +308,7 @@ section.content_section + section.content_section {
       }
       .title {
         padding: 0 0 10px 0;
-        @media (min-width: $breakpoint-tablet) {
+        @media (min-width: $breakpoint-laptop) {
           padding: 0 0 20px 0;
         }
         h3 {
